@@ -127,7 +127,8 @@ class PdfModel extends GaletteTestCase
             'asso_website'       => '/{ASSO_WEBSITE}/',
             'asso_logo'          => '/{ASSO_LOGO}/',
             'date_now'           => '/{DATE_NOW}/',
-            'login_uri'          => '/{LOGIN_URI}/'
+            'login_uri'          => '/{LOGIN_URI}/',
+            'asso_footer'        => '/{ASSO_FOOTER}/',
         ];
         $this->assertSame($main_expected, $model->getPatterns());
 
@@ -363,7 +364,7 @@ Au milieu
         $this->assertArrayHasKey('member', $legend);
         $this->assertArrayHasKey('contribution', $legend);
 
-        $this->assertCount(8, $legend['main']['patterns']);
+        $this->assertCount(9, $legend['main']['patterns']);
         $this->assertCount(28, $legend['member']['patterns']);
         $this->assertTrue(isset($legend['member']['patterns']['label_dynfield_' . $adf->getId() . '_adh']));
         $this->assertCount(14, $legend['contribution']['patterns']);
